app/main/default/objects/Purchase_Product__c/Purchase_Product__c.object-meta.xml
<CustomObject>
    <label>Purchase Product</label>
    <nameField>
        <displayFormat>PP-{000000}</displayFormat>
        <label>Product Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>