app/main/default/objects/Purchase_Product__c/fields/Install_Charges__c.field-meta.xml
<CustomField>
    <fullName>Install_Charges__c</fullName>
    <label>Install Charges</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>