app/main/default/objects/Purchase_Product__c/fields/Sales_Product__c.field-meta.xml
<CustomField>
    <fullName>Sales_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Purchase Products</relationshipLabel>
    <relationshipName>Purchase_Products</relationshipName>
    <type>Lookup</type>
</CustomField>